add readme and name chunks

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,7 +5,7 @@ output:
     keep_md: true
 ---
 
-```{r setup, include=TRUE}
+```{r setup, include=TRUE, warning = FALSE, message = FALSE}
 # Register an inline hook for formatting numbers
 knitr::knit_hooks$set(inline = function(x) {
   if (is.numeric(x)) {
@@ -15,9 +15,7 @@ knitr::knit_hooks$set(inline = function(x) {
     x
   }
 })
-```
 
-```{r warning = FALSE, message = FALSE}
 library(tidyverse)
 library(lubridate)
 options(dplyr.summarise.inform = FALSE)
@@ -31,7 +29,7 @@ The source data is included in this repo, in a zip file. To reproduce this analy
 
 We first read the data into R, and create some helper functions.
 
-```{r message = FALSE}
+```{r load, message = FALSE}
 data <- read_csv("activity.csv")
 data_without_na <- data %>% filter(!is.na(steps))
 
@@ -57,7 +55,7 @@ draw_hist <- function(data) {
 
 The following figure shows the distribution of total daily steps:
 
-```{r}
+```{r mean}
 total_per_day <- get_total_per_day(data_without_na)
 draw_hist(total_per_day)
 
@@ -73,7 +71,7 @@ The median number of steps taken in a day is `r median` (to the nearest whole nu
 To see the average daily pattern, we group the data by interval and then
 take the mean number of steps for each interval, across dates.
 
-```{r}
+```{r daily}
 average_across_days <- data_without_na %>%
   group_by(interval) %>%
   summarise(mean(steps)) %>%
@@ -95,7 +93,7 @@ The interval with the maximum number of average steps is `r max_interval`
 
 ## Imputing missing values
 
-```{r}
+```{r missing}
 missing <- data %>%
   filter(is.na(steps))
 
@@ -106,7 +104,7 @@ There are `r num_missing` missing rows in the data.
 
 For a simple imputation of missing values, we replace each missing number of steps with the mean number of steps for that interval.
 
-```{r}
+```{r impute}
 imputed <- data %>%
   mutate(steps = replace(steps, is.na(steps), average_across_days$mean))
 
@@ -115,7 +113,7 @@ total_per_day_imputed <- get_total_per_day(imputed)
 
 We can now visualise the total daily steps for our imputed data set, as before:
 
-```{r}
+```{r mean-imputed}
 draw_hist(total_per_day_imputed)
 
 mean_imputed <- mean(total_per_day_imputed$total)
@@ -127,7 +125,7 @@ and the median number of steps taken in a day is `r median_imputed`. Notice that
 
 To see this more clearly, we can view the two datasets side by side and note that the distribution of frequencies is unchanged, with more weight simply added to the mean.
 
-```{r}
+```{r compare}
 
 total_excluding_missing_vals <- total_per_day %>% mutate(type = "excluding missing values")
 total_with_imputed_vals <- total_per_day_imputed %>% mutate(type = "imputed missing value")
@@ -152,7 +150,7 @@ qplot(x = total,
 
 To compare weekend and weekday patterns, we plot the mean number of steps in each daily interval, disaggregated by type of day. We can see that on weekdays, more steps are taken earlier in the day, and at the weekends steps are more evenly distributed across the day.
 
-```{r}
+```{r weekend}
 daytype_data <- imputed %>%
   mutate(daytype = factor(wday(date) < 6, labels = c("weekend", "weekday"))) %>%
   group_by(daytype, interval) %>%
